--- a/test/Syncromatics.Clients.HoustonMetro.Api.Tests/Syncromatics.Clients.HoustonMetro.Api.Tests.csproj
+++ b/test/Syncromatics.Clients.HoustonMetro.Api.Tests/Syncromatics.Clients.HoustonMetro.Api.Tests.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.4.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
+    <PackageReference Include="Polly" Version="6.1.0" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
   </ItemGroup>
