--- a/.gitignore
+++ b/.gitignore
@@ -134,7 +134,7 @@ publish/
 # Publish Web Output
 *.[Pp]ublish.xml
 *.azurePubxml
-# TODO: Comment the next line if you want to checkin your web deploy settings 
+# TODO: Comment the next line if you want to checkin your web deploy settings
 # but database connection strings (with potential passwords) will be unencrypted
 *.pubxml
 *.publishproj
@@ -213,4 +213,4 @@ src/Lasticity.Core/obj/Debug/*
 tests/Lasticity.IntegrationTests/bin/*
 tests/Lasticity.IntegrationTests/obj/Debug/*
 
-
+.idea/
